--- a/Socket/HelloSocket/EasyTcpClient/EasyTcpClient.vcxproj
+++ b/Socket/HelloSocket/EasyTcpClient/EasyTcpClient.vcxproj
@@ -149,6 +149,10 @@
   <ItemGroup>
     <ClCompile Include="Client.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DataDef.hpp" />
+    <ClInclude Include="EasyTcpClient.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
