--- a/Socket/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj
+++ b/Socket/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj
@@ -149,6 +149,10 @@
   <ItemGroup>
     <ClCompile Include="Server.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DataDef.hpp" />
+    <ClInclude Include="EasyTcpServer.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
