--- a/Socket/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj
+++ b/Socket/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Server.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CELLTimestamp.hpp" />
     <ClInclude Include="DataDef.hpp" />
     <ClInclude Include="EasyTcpServer.hpp" />
   </ItemGroup>
