头文件和实现拆开

--- a/Socket/HelloSocket/EasyTcpClient/EasyTcpClient.vcxproj
+++ b/Socket/HelloSocket/EasyTcpClient/EasyTcpClient.vcxproj
@@ -151,7 +151,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DataDef.hpp" />
-    <ClInclude Include="EasyTcpClient.hpp" />
+    <ClInclude Include="EaayTcpClient.h" />
+    <ClInclude Include="EasyTcpClient.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
