--- a/Socket/HelloSocket/EasyTcpClient/EasyTcpClient.vcxproj.filters
+++ b/Socket/HelloSocket/EasyTcpClient/EasyTcpClient.vcxproj.filters
@@ -20,11 +20,14 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="EasyTcpClient.hpp">
+    <ClInclude Include="EasyTcpClient.cpp">
       <Filter>源文件</Filter>
     </ClInclude>
     <ClInclude Include="DataDef.hpp">
       <Filter>源文件</Filter>
+    </ClInclude>
+    <ClInclude Include="EaayTcpClient.h">
+      <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
