--- a/Socket/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj
+++ b/Socket/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj
@@ -152,7 +152,8 @@
   <ItemGroup>
     <ClInclude Include="CELLTimestamp.hpp" />
     <ClInclude Include="DataDef.hpp" />
-    <ClInclude Include="EasyTcpServer.hpp" />
+    <ClInclude Include="EasyTcpServer.h" />
+    <ClInclude Include="EasyTcpServer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
