--- a/Socket/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj.filters
+++ b/Socket/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj.filters
@@ -23,11 +23,14 @@
     <ClInclude Include="DataDef.hpp">
       <Filter>源文件</Filter>
     </ClInclude>
-    <ClInclude Include="EasyTcpServer.hpp">
+    <ClInclude Include="EasyTcpServer.cpp">
       <Filter>源文件</Filter>
     </ClInclude>
     <ClInclude Include="CELLTimestamp.hpp">
       <Filter>源文件</Filter>
+    </ClInclude>
+    <ClInclude Include="EasyTcpServer.h">
+      <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
