--- a/Socket/HelloSocket/EasyTcpClient/EasyTcpClient.vcxproj
+++ b/Socket/HelloSocket/EasyTcpClient/EasyTcpClient.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Client.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CELLTimestamp.hpp" />
     <ClInclude Include="DataDef.hpp" />
     <ClInclude Include="EasyTcpClient.h" />
     <ClInclude Include="EasyTcpClient.cpp" />
