--- a/Socket/HelloSocket/HelloMemory/HelloMemory.vcxproj.filters
+++ b/Socket/HelloSocket/HelloMemory/HelloMemory.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Alloctor.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="MemoryMgr.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
