--- a/Socket/HelloSocket/HelloMemory/HelloMemory.vcxproj
+++ b/Socket/HelloSocket/HelloMemory/HelloMemory.vcxproj
@@ -152,6 +152,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Alloctor.h" />
+    <ClInclude Include="CELLObjectPool.hpp" />
+    <ClInclude Include="CELLTimestamp.hpp" />
     <ClInclude Include="MemoryMgr.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
