--- a/Socket/HelloSocket/HelloMemory/HelloMemory.vcxproj.filters
+++ b/Socket/HelloSocket/HelloMemory/HelloMemory.vcxproj.filters
@@ -29,5 +29,11 @@
     <ClInclude Include="MemoryMgr.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CELLObjectPool.hpp">
+      <Filter>源文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CELLTimestamp.hpp">
+      <Filter>源文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
