--- a/Socket/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj.filters
+++ b/Socket/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj.filters
@@ -53,5 +53,11 @@
     <ClInclude Include="INetEvent.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CELLSemaphore.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CELLThread.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
