--- a/Socket/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj.filters
+++ b/Socket/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="CELLThread.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CELLLog.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
