客户端服务器通用文件放在公共区

--- a/Socket/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj
+++ b/Socket/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj
@@ -96,6 +96,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>E:\Project\myproject\Server\Socket\HelloSocket\Depends\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -110,6 +111,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>E:\Project\myproject\Server\Socket\HelloSocket\Depends\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -124,6 +126,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>E:\Project\myproject\Server\Socket\HelloSocket\Depends\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -138,6 +141,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>E:\Project\myproject\Server\Socket\HelloSocket\Depends\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -147,23 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="CELLServer.cpp" />
-    <ClCompile Include="CELLTask.cpp" />
     <ClCompile Include="Server.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="CELLClient.h" />
-    <ClInclude Include="CELLLog.h" />
-    <ClInclude Include="CELLSemaphore.h" />
-    <ClInclude Include="CELLServer.h" />
-    <ClInclude Include="CELLTask.h" />
-    <ClInclude Include="CELLThread.h" />
-    <ClInclude Include="CELLTimestamp.hpp" />
-    <ClInclude Include="DataDef.hpp" />
-    <ClInclude Include="EasyTcpServer.h" />
-    <ClInclude Include="EasyTcpServer.cpp" />
-    <ClInclude Include="INetEvent.h" />
-    <ClInclude Include="ServerDefs.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
